# km

./: .cursorignore  .gitignore  CHANGELOG.md  LICENSE  README.md  km.spec  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
case-exports/: sync-manifest.json
case-exports/graphs/: refs-heads-main.ttl
docs/: brief.md  knowledge-management-specification-add-1.md  knowledge-management-specification-add-2.md  knowledge-management-specification-add-3.md  knowledge-management-specification.md
docs/simulations/: app-feature-simulation.md  cake-recipe-simulation.md
scripts/: build-binary.py  build-linux.sh  build-macos.sh  build-windows.ps1  check_coverage_per_file.py  validate_release_tag.py
src/km/: __init__.py  exceptions.py  logging_config.py
tests/: conftest.py  fixtures_data.py
tests/integration/: test_addendum2_cache_closure.py  test_mcp_smoke.py
tests/unit/: test_bootstrap_no_lo.py  test_bundle.py  test_case_ingest_service.py  test_cli.py  test_config.py  test_dependency_graph.py  test_diff_renderer.py  test_feature_gate.py  test_git_context.py  test_graph_uri_migration.py  test_lo_cache.py  test_lo_catalog.py  test_lo_root.py  test_lo_source_store.py  test_logging.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_subscribe.py  test_mcp_tools.py  test_merge_base.py  test_patch_case_facts.py  test_phase2_case.py  test_phase3_validation.py  test_phase4_semantic_mr.py  test_phase5_git_sync.py  test_ref_watcher.py  test_shacl_cache.py  test_status.py  (+3 more)
usages/: README.md  agents.md  agents.mdc  skills.md  skills.mdc
(+62 files in other folders)
